[gd_scene load_steps=7 format=2]

[ext_resource path="res://Mine/MineExplosion.gd" type="Script" id=1]
[ext_resource path="res://Mine/MineExplosionTexture.tres" type="Material" id=2]
[ext_resource path="res://Mine/MineExplosionModel.tres" type="SphereMesh" id=3]

[sub_resource type="ParticlesMaterial" id=7]
spread = 180.0
flatness = 1.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 8.0
damping = 4.0

[sub_resource type="SpatialMaterial" id=8]
albedo_color = Color( 0.988235, 0.603922, 0.113725, 1 )

[sub_resource type="SphereMesh" id=9]
material = SubResource( 8 )
radius = 0.05
height = 0.05
radial_segments = 5
rings = 5
is_hemisphere = true

[node name="MineExplosion" type="Spatial"]
script = ExtResource( 1 )

[node name="MineExplosionParticles" type="Particles" parent="."]
visible = false
cast_shadow = 0
emitting = false
amount = 100
one_shot = true
explosiveness = 1.0
process_material = SubResource( 7 )
draw_pass_1 = SubResource( 9 )

[node name="MineExplosionModel" type="MeshInstance" parent="."]
cast_shadow = 2
mesh = ExtResource( 3 )
material/0 = ExtResource( 2 )

[node name="MineExplosionLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.156709, 0 )
light_indirect_energy = 0.0
light_specular = 1.0

[node name="MineExplosionTween" type="Tween" parent="."]
[connection signal="tween_all_completed" from="MineExplosionTween" to="." method="_on_explosion_tweens_completed"]
